--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -261,6 +261,7 @@
     <Content Include="Views\Addresses\Index.cshtml" />
     <Content Include="Views\Addresses\View.cshtml" />
     <Content Include="Views\Home\ValidationView.cshtml" />
+    <Content Include="Views\Home\ExistValidationView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
