Created Editor and Display template. Added helper close button. Cleared validation in add form. House number not may be 666

--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -207,6 +207,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="App_Code\Helpers.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -242,7 +243,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\UpdateAddresses.cshtml" />
+    <Content Include="Views\Home\UpdateAddressesTable.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -252,8 +253,11 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\Home\ValidateForm.cshtml" />
-    <Content Include="Views\Home\FormView.cshtml" />
+    <Content Include="Views\Home\ValidateAddAddressForm.cshtml" />
+    <Content Include="Views\Home\AddAddressForm.cshtml" />
+    <Content Include="Views\Home\DisplayTemplates\String.cshtml" />
+    <Content Include="Views\Home\DisplayTemplates\Date.cshtml" />
+    <Content Include="Views\Home\EditorTemplates\Address.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
