--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -225,6 +225,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\MyScripts\checkCapitalLetter.js" />
     <Content Include="Scripts\MyScripts\clearValidate.js" />
+    <Content Include="Scripts\MyScripts\loader.js" />
     <Content Include="Scripts\MyScripts\openEditorForm.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
