--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -223,8 +223,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\MyScripts\InputAddressFormListeners.js" />
-    <Content Include="Scripts\MyScripts\clearValidate.js" />
+    <Content Include="Scripts\MyScripts\inputListenersAddressForm.js" />
+    <Content Include="Scripts\MyScripts\resetForm.js" />
     <Content Include="Scripts\MyScripts\loader.js" />
     <Content Include="Scripts\MyScripts\openEditorForm.js" />
     <Content Include="Scripts\popper-utils.js" />
