Name views and methods changed

--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -249,7 +249,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\UpdateAddressesTable.cshtml" />
+    <Content Include="Views\Home\AddressesTable.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -259,8 +259,8 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\Home\ValidateAddAddressForm.cshtml" />
-    <Content Include="Views\Home\AddAddressForm.cshtml" />
+    <Content Include="Views\Home\ValidateAddressForm.cshtml" />
+    <Content Include="Views\Home\AddressForm.cshtml" />
     <Content Include="Views\Home\DisplayTemplates\String.cshtml" />
     <Content Include="Views\Home\DisplayTemplates\Date.cshtml" />
     <Content Include="Views\Home\EditorTemplates\Address.cshtml" />
