--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\AddressContext.cs" />
     <Compile Include="Models\TypeBuilding.cs" />
